Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60605

QWebEngineView outputs errors when using QSurfaceFormat::CoreProfile

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.9.2
    • 5.9
    • WebEngine
    • None
    • 9883dca4714c82079d390da18d1e3ff36f29b5a7

      Using the "webenginewidgets/minimal" example, if I add this to the top of main():

      QSurfaceFormat format;
      format.setVersion( 3, 2 );
      format.setProfile( QSurfaceFormat::CoreProfile );
      QSurfaceFormat::setDefaultFormat( format );
      

      I get the following errors in the console when running the example:

      [89072:52755:0505/121425.234697:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [89072:52755:0505/121425.235515:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [89072:52755:0505/121425.237231:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [89072:52755:0505/121425.237695:ERROR:gl_context_cgl.cc(136)] Error creating context.
      GVA info: Successfully connected to the Intel plugin, offline Gen75
      

      If I change the profile to to QSurfaceFormat::CompatibilityProfile, the errors go away.

      (Incidentally, that "GVA Info:" is always output to the console.)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            asm Andy M
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes