chromium/gpu/config/gpu_switching.cc
@@ -64,7 +64,9 @@ bool SwitchableGPUsSupported(const GPUInfo& gpu_info,
       (command_line.GetSwitchValueASCII(switches::kUseGL) !=
            gl::kGLImplementationDesktopName &&
        command_line.GetSwitchValueASCII(switches::kUseGL) !=
-           gl::kGLImplementationANGLEName)) {
+           gl::kGLImplementationANGLEName &&
+       command_line.GetSwitchValueASCII(switches::kUseGL) !=
+           gl::kGLImplementationCoreProfileName)) {
     return false;
   }
   // Always allow offline renderers on ARM-based macs.
