chromium/ui/gl/gl_switches.cc
@@ -14,6 +14,7 @@
 namespace gl {
 
 const char kGLImplementationDesktopName[] = "desktop";
+const char kGLImplementationCoreProfileName[] = "core_profile";
 const char kGLImplementationAppleName[] = "apple";
 const char kGLImplementationEGLName[] = "egl";
 const char kGLImplementationANGLEName[] = "angle";
